# Evoki-V3.0-APK-Lokalhost-Google-Cloude

./: .geminiignore  .gitignore  ARCHITECTURE.txt  BLUEPRINT_SOVEREIGN_EXTENSION.md  COMPLETE_DATA_PIPELINE_ANALYSIS.md  DATABASE_ARCHITECTURE_4DB.md  EVOKI_V3_SUCCESS_REPORT.md  EXTENDED_PIPELINE_SUCCESS_REPORT.md  FINAL_HYBRID_DATABASE_ARCHITECTURE.md  FIRST_PROMPT.txt  HISTORY_INGEST_REPORT.json  HOW_TO_EVOKI_V3.md  LIVE_PIPELINE_TEST_PLAN.md  METRICS_CALCULATION_ORDER.md  METRICS_DISTRIBUTION_PLAN.md  PRAGMATIC_ACTION_PLAN.md  QUICK_START_V3_DATA_LAYER.md  README.md  REFACTORING_PLAN_4PHASE.md  REVERSIBILITY_PRINCIPLE.md  ROADMAP_STATUS_REPORT.md  SCHEMA_STORAGE_ANALYSIS.md  SCHEMA_VALIDATION_CRITICAL.md  SPEC_FINAL7_MASTER_REFERENCE.md  T0_BOOTCHECK_STATUS.md  T0_SUCCESS_REPORT.md  T1_COMPLETE.md  T1_CONTRACT_STATUS.md  T2_COMPLETE.md  T2_PIPELINE_SUCCESS_REPORT.md  T2_SESSION_SUMMARY.md  T3_LEXIKA_INTEGRATION_PLAN.md  T4_METRICS_BACKFILL_ROADMAP.md  T4_PARTIAL_COMPLETE.md  TODO_PHASE_0_FOUNDATION.md  V3_DATA_LAYER_ROADMAP.md  all_compute_functions.txt  calibration_schema.md  check_db.py  check_db_detailed.py  (+47 more)
.github/: copilot-instructions.md
EVOKI_HARDENING_DATA_PACK_V3/: EVOKI_CRITICAL_PATH_V1.yaml  EVOKI_DEPRECATION_LEDGER_V1.md  (+3 more)
TODO/: README.md  (+10 more)
temple/: main.py  pyproject.toml
temple/automation/: pending_status_watcher.py  status_history_manager.py  synapse_logic.py  write_pending_status.py
temple/core/: config.py
temple/models/: trialog.py
temple/routes/: integrity.py
temple/trinity_engine/cipher/: cipher.py
temple/trinity_engine/kryos/: kryos.py
(+22974 files in other folders)
