[project]
name = "evoki-temple"
version = "0.1.0"
description = "EVOKI V3.0 Spirit — FastAPI backend for the Resonance Engine"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
